--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -13,3 +13,5 @@ display:
 # If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
 # orbs:
 #  hello: circleci/hello-build@0.0.5
+orbs:
+  slack: circleci/slack@3.4.2
