--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,9 +88,9 @@ workflows:
       - orb-tools/dev-promote-prod-from-commit-subject:
           orb-name: ricardo/ric-orb
           context: orb-publishing
-          add-pr-comment: false
+          add-pr-comment: true
           fail-if-semver-not-indicated: true
-          publish-version-tag: false
+          publish-version-tag: true
           requires:
             - integration-test-1
           filters:
