Add working_directory parameter
* Add working directory parameter in order to be able to use the orb in
mono repo project

--- a/src/commands/deploy.yml
+++ b/src/commands/deploy.yml
@@ -7,8 +7,12 @@ parameters:
   config:
     type: string
     default: isopod.yml
+  working_directory:
+    type: string
+    default: .
 steps:
   - auth_gke
   - run:
       name: Deploy to cluster
       command: isopod -f << parameters.config >> deploy --environment << parameters.to >>
+      working_directory: <<parameters.working_directory>>
