--- a/src/commands/install_build_test.yml
+++ b/src/commands/install_build_test.yml
@@ -7,17 +7,13 @@ parameters:
 steps:
   - run:
       working_directory: << parameters.work_dir >>
-      name: Installing dependencies
+      name: Installing dependencies for << parameters.work_dir >>
       command: make install
   - run:
       working_directory: << parameters.work_dir >>
-      name: Test that the app can successfully build
+      name: Test that the app can successfully build for << parameters.work_dir >>
       command: make build
   - run:
       working_directory: << parameters.work_dir >>
-      name: Running tests
+      name: Running tests for << parameters.work_dir >>
       command: make test
-  - run:
-      working_directory: << parameters.work_dir >>
-      name: Deploy application
-      command: make deploy
