--- a/src/jobs/deploy_job.yml
+++ b/src/jobs/deploy_job.yml
@@ -53,6 +53,9 @@ parameters:
   slack_fail_branches:
     type: string
     default: master
+  work_dir:
+    type: string
+    default: .
 steps:
   - checkout
   - steps: << parameters.predeploy_steps >>
@@ -67,6 +70,7 @@ steps:
         - run: echo "default deploy"
         - deploy:
             to: <<parameters.env>>
+            work_dir: << parameters.work_dir >>
   - steps: << parameters.postdeploy_steps >>
   - when:
       condition: << parameters.slack_notify_success >>
