add all the readmes

--- a/src/executors/java_builder_docker.yml
+++ b/src/executors/java_builder_docker.yml
@@ -6,15 +6,15 @@ parameters:
     description: "Java version to install (or rather selecting an existing image accordingly)"
     type: string
     default: "11.0"
-  jfrog_username:
+  docker_hub_username:
     type: string
     default: $DOCKER_JFROG_USERNAME
-  jfrog_password:
+  docker_hub_password:
     type: string
     default: $DOCKER_JFROG_PASSWORD
 
 docker:
   - image: "cimg/openjdk:<< parameters.java_version >>"
     auth:
-      username: << parameters.jfrog_username >>
-      password: << parameters.jfrog_password >>
+      username: << parameters.docker_hub_username >>
+      password: << parameters.docker_hub_password >>
