--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-# orb.yml is "packed" from source, and not published directly from the repository.
+# orb.yml is "packed" (built) from orb sources, and not published directly from the repository.
 orb.yml
+
+# intellij IDE metadata
 **/.idea
