PR review - inline simplistic commands - using app_path instead of appname makes some things easier

--- a/src/commands/java_isopod_build.yml
+++ b/src/commands/java_isopod_build.yml
@@ -3,21 +3,11 @@ description: >
   Supports app-module from monorepo as well as single app from single-app-repo.
 
 parameters:
-  appname:
-    description: "Name of maven module for the app, or blank for single-app-repo"
+  app_path:
+    description: "Path of maven module for the app, or \".\" for single-app-repo"
     type: string
-    default: ""
+    default: "."
 
 steps:
-  # build app image (maven module) from monorepo
-  - when:
-      condition: << parameters.appname >>
-      steps:
-        - run: |
-            isopod -f << parameters.appname >>/isopod.yml build
-  # build app image from single-app-repo
-  - unless:
-      condition: << parameters.appname >>
-      steps:
-        - run: |
-            isopod build
+  - run: |
+      isopod -f << parameters.app_path >>/isopod.yml build
