--- a/src/jobs/java_maven_build_test.yml
+++ b/src/jobs/java_maven_build_test.yml
@@ -3,10 +3,10 @@ description: >
   Supports app-module from monorepo as well as single app from single-app-repo.
 
 parameters:
-  appname:
-    description: "Name of maven module for the app, or blank for single-app-repo"
+  app_path:
+    description: "Path of maven module for the app, or \".\" for single-app-repo"
     type: string
-    default: ""
+    default: "."
   maven_cache_key_prefix:
     description: "Prefix for the maven artifacts cache-key (used in combination with checksum of pom.xml); no caching with blank prefix"
     type: string
@@ -36,8 +36,8 @@ steps:
   - java_restore_maven_artifacts:
       maven_cache_key_prefix: << parameters.maven_cache_key_prefix >>
   - java_maven_build_test:
-      appname: << parameters.appname >>
+      app_path: << parameters.app_path >>
   - java_cache_maven_artifacts:
       maven_cache_key_prefix: << parameters.maven_cache_key_prefix >>
   - java_save_maven_output:
-      appname: << parameters.appname >>
+      app_path: << parameters.app_path >>
